--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=5000
+CLIENT_ID=1027570738919-m5lqtj67bmau7das37dk94uhv8nmhaim.apps.googleusercontent.com
+CLIENT_SECRET=1p2ED1426vkYQtBVlQFNp5a3
