--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "express-validator": "^6.12.1",
+    "googleapis": "^84.0.0",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "mongoose": "^5.13.7",
